<resources>
    <string name="app_name">MyAlarmApp</string>
    <string name="Будильник">Будильник</string>
    <string name="Часы">Часы</string>
    <string name="Таймер">Таймер</string>
    <string name="Секундомер">Секундомер</string>
    <string name="Режимсна">Режим сна</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="Начать">Начать</string>
    <string name="text_sunday">В</string>
    <string name="text_saturday">С</string>
    <string name="text_friday">П</string>
    <string name="text_thursday">Ч</string>
    <string name="text_wednesday">С</string>
    <string name="text_tuesday">В</string>
    <string name="text_monday">П</string>
    <string name="text_ok">ОК</string>
    <string name="text_cancel">Отмена</string>
    <string name="text_opisaniya">Описание</string>
    <string name="text_addLabel">Добавить ярлык</string>
    <string name="search_countries">Поиск города</string>
    <string name="turn_off">Выключить</string>
    <string name="put_aside">Отложить</string>
</resources>