<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_fragments"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/rubik"
            android:text="@string/Таймер"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="@+id/tv_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_timer" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_timerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:text="00:00:00"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_numbers"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_timerTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal">
            
            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                android:clickable="true"
                android:foreground="@drawable/ripple_effect"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                app:cardElevation="10dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="15dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>
            
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                app:cardElevation="10dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="15dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                app:cardElevation="10dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="15dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                app:cardElevation="10dp"
                android:foreground="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="15dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="#202429">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_back"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
        
        
    </LinearLayout>
        


</androidx.constraintlayout.widget.ConstraintLayout>